# Advanced_Robotics

./: CMakeLists.txt  README.md  package.xml
launch/: RP-robot.launch  RR-robot.launch  RR-robot_CP6.launch
src/: RP-robot (forward kinematics).cpp  RP-robot.cpp  RR-robot (forward kinematics).cpp  RR-robot (point-upper-full).cpp  RR-robot.cpp  RR-robot_CP6.cpp
urdf/: RP-robot (3축).urdf  RP-robot.urdf  RR-robot (3축).urdf  RR-robot.urdf
video/: 05_prob1.mkv  05_prob3.mkv  05_prob4.mkv  5_prob1.mkv  5_prob3.mkv  RP manipulator.mkv  RR manipulator.mkv
